# ellmos-servercommander-mcp

./: .gitignore  .npmignore  CHANGELOG.md  KONZEPT.md  README.md  README_de.md  glama.json  llms.txt  package-lock.json  package.json  pyproject.toml  server.json
artwork/originals/: README.md
config/: servercommander.example.toml
src/servercommander/: __init__.py  config.py  deploy.py  health.py  i18n.py  logs.py  mail.py  server.py  tooling.py
tests/: test_config.py  test_repository_hygiene.py  test_tools.py
