[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ellmos-servercommander-mcp"
version = "0.1.0a6"
description = "MCP server for server operations: deploy, mail, log analysis, health checks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Lukas Geiger" }]
keywords = ["mcp", "deploy", "server-management", "i18n", "ellmos"]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
sftp = ["paramiko>=3.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
ellmos-servercommander = "servercommander.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/servercommander"]

[tool.pytest.ini_options]
pythonpath = ["src"]
